--- a/style.css
+++ b/style.css
@@ -1,1 +1,3 @@
-body{background-color: rgb(43, 43, 43);}
+header{background-color: rgb(0, 0, 0);
+color: rgb(255, 10, 10);}
+.cabecalho-imagem{width: 6%;}
