--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
-header{background-color: rgb(0, 0, 0);
-color: rgb(255, 10, 10);}
-.cabecalho-imagem{width: 6%;}
+*{
+    margin: 0;
+    padding: 0;
+}
+.cabecalho{background-color: rgb(0, 0, 0);
+color: rgb(255, 10, 10);
+display: flex;
+justify-content: space-around;}
+.cabecalho-imagem{width: 20%;}
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+}
