--- a/style.css
+++ b/style.css
@@ -2,12 +2,24 @@
     margin: 0;
     padding: 0;
 }
-.cabecalho{background-color: rgb(0, 0, 0);
+ header{background-color: rgb(0, 0, 0);
 color: rgb(255, 10, 10);
 display: flex;
-justify-content: space-around;}
-.cabecalho-imagem{width: 20%;}
-.cabecalho-lista-item{
-    display: inline-block;
+justify-content: space-around;
+padding: 24px 0;}
+.imagem-cabecalho{
+    width: 15%;
+    height: 5%;
+    }
+li 
+{display: inline-block;
     margin: 0 16px;
+    padding: 24px 0;
+    font-size: 24px;
+}
+h1 
+{display: inline-block;
+    margin: 0 16px;
+    padding: 100px 0;
+    font-size: 40px;
 }
