--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
  header{background-color: rgb(0, 0, 0);
-color: rgb(255, 10, 10);
+color: rgb(255, 0, 0);
 display: flex;
 justify-content: space-around;
 padding: 24px 0;}
@@ -14,12 +14,25 @@ padding: 24px 0;}
 li 
 {display: inline-block;
     margin: 0 16px;
-    padding: 24px 0;
-    font-size: 24px;
+    padding: 25px 0;
+    font-size: 25px;
 }
+
+.escola-imagem{
+    width: 20%;
+}
+
 h1 
 {display: inline-block;
     margin: 0 16px;
     padding: 100px 0;
     font-size: 40px;
+}
+.escola{
+    background-image: linear-gradient(black, red);
+    color: aliceblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
 }
