--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ color: rgb(255, 0, 0);
 display: flex;
 justify-content: space-around;
 padding: 24px 0;}
+
 .imagem-cabecalho{
     width: 15%;
     height: 5%;
@@ -23,10 +24,10 @@ li
 }
 
 h1 
-{display: inline-block;
+{display: flex;
     margin: 0 16px;
     padding: 100px 0;
-    font-size: 40px;
+    font-size: 20px;
 }
 .escola{
     background-image: linear-gradient(black, red);
@@ -34,5 +35,19 @@ h1
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px 0px;
+}
+
+.escola-conteudo{
+    width: 90%;
+}
+
+.escola-titulo{
+    padding: 50px 30px;
+
+}
+
+.aluno1{
+    width: 20%;
+    height: 20%;
 }
