--- a/style.css
+++ b/style.css
@@ -51,3 +51,28 @@ h1
     width: 20%;
     height: 20%;
 }
+
+.estudante-icone{
+    width: 100px;
+}
+
+.estudante-icone2{
+    width: 120px;
+}
+
+.estudante-icone3{
+    width: 150px;
+}
+
+.estudante-div{
+    text-align: center;
+}
+
+.aluno2{
+    width: 20%;
+    height: 20%;
+}
+
+.estudante-div2{
+    text-align: center;
+}
