--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
+body{font-family: sans-serif;}
+
+
+
  header{background-color: rgb(0, 0, 0);
 color: rgb(255, 0, 0);
 display: flex;
@@ -48,31 +53,23 @@ h1
 }
 
 .aluno1{
-    width: 20%;
-    height: 20%;
+    width: 40%;
+    height: 50%;
 }
 
 .estudante-icone{
-    width: 100px;
-}
-
-.estudante-icone2{
-    width: 120px;
-}
-
-.estudante-icone3{
-    width: 150px;
+    width: 10%;
 }
 
 .estudante-div{
     text-align: center;
 }
 
-.aluno2{
-    width: 20%;
-    height: 20%;
+.aluno-titulo{
+    text-align: center;
 }
 
-.estudante-div2{
-    text-align: center;
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
 }
